sample-nginx-app/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment
  labels:
    app: blue

spec:
  replicas: 3

  selector:
    matchLabels:
      app: blue

  template:
    metadata:
      labels:
        app: blue

    spec:
      containers:
      - name: nginx
        image: nginx

        command:
        - /bin/sh
        - -c
        - |
          echo "Welcome to Blue APP" > /usr/share/nginx/html/index.html
          nginx -g 'daemon off;'

        ports:
        - containerPort: 80
