sample-nginx-app/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  type: ClusterIP

  selector:
    app: blue

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
