sample-nginx-app/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  type: ClusterIP

  selector:
    app: green

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
