sample-nginx-app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: prod-gateway

spec:
  gatewayClassName: gke-l7-global-external-managed

  listeners:
  - name: http
    protocol: HTTP
    port: 80
