sample-nginx-app/default-https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: default-route

spec:
  parentRefs:
  - name: my-tls-gateway

  rules:
  - backendRefs:
    - name: green-service
      port: 80
