sample-nginx-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: blue-green-weighted-route
  namespace: default

spec:
  parentRefs:
  - name: prod-gateway

  hostnames:
  - myapp.example.com

  rules:
  - backendRefs:
    - name: blue-service
      port: 80
      weight: 0

    - name: green-service
      port: 80
      weight: 100
