sample-nginx-app/httpsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: https-app-route

spec:
  parentRefs:
  - name: my-tls-gateway

  hostnames:
  - "example.internal"

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /

    backendRefs:
    - name: blue-service
      port: 80
      weight: 0

    - name: green-service
      port: 80
      weight: 100
